@@ -2,8 +2,9 @@
 BEGIN;
 ALTER SCHEMA public RENAME TO lsmb_13fail;
 ALTER SCHEMA lsmb12 RENAME TO public;
+COMMIT;
 
-
+BEGIN;
 ALTER TABLE vendor DROP COLUMN entity_id;
 ALTER TABLE vendor DROP COLUMN company_id;
 ALTER TABLE vendor DROP COLUMN credit_id;
