@@ -12,6 +12,9 @@ Changelog for LedgerSMB 1.3.4
 * Corrected a couple of menu items (David B)
 * Added 1.3-1.2 downgrade script to recover from failed upgrades (Chris T)
 * Corrected ship/receive bug due to invalid join conditions (Chris T)
+* Corrected template error in printPayment.html (Herman V)
+* Form.pl now provides instructions to use setup.pl to correct database
+versioning errors (Chris T)
 
 Chris T is Chris Travers
 David B is David Bandel
